# mint

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md
arch/include/x86_64/: types.h  x86_64
arch/include/x86_64/boot/: multiboot.h
arch/include/x86_64/cpu/: cpu.h  registers.h  tables.h
arch/include/x86_64/drivers/: io.h
arch/include/x86_64/mm/: mm.h  mmap.h
arch/include/x86_64/tm/: thread.h
arch/x86_64/: CMakeLists.txt  Makefile  mint.lds  platform.cmake  toolchain.cmake
arch/x86_64/boot/: CMakeLists.txt  Makefile  bootstrap32.S  bootstrap32.asm  x86-64_init.c
arch/x86_64/cpu/: CMakeLists.txt  cpu.c  flush.asm  gdt.c  idt.c  interrupt.c  isr.asm  power.c  tss.asm
arch/x86_64/kernel/: CMakeLists.txt  Makefile  early_console.c  setup.c  stacktrace.c
arch/x86_64/lib/: CMakeLists.txt  memset.asm
arch/x86_64/mm/: CMakeLists.txt  clone.c  fault.c  init.c  map.c  unmap.c
arch/x86_64/tm/: CMakeLists.txt  thread.c
block/: CMakeLists.txt  block.c
cpu/: CMakeLists.txt  exception.c  halt.c  interrupt.c  power.c
drivers/: CMakeLists.txt
drivers/ata/: CMakeLists.txt
drivers/ata/ahci/: CMakeLists.txt  ahci.c
drivers/clock/: CMakeLists.txt  intel-8253.c  jiffy.c  tsc.c
drivers/irqchip/: CMakeLists.txt  intel-8259.c  irqchip.c
drivers/pci/: CMakeLists.txt  pci.c
fs/: CMakeLists.txt  dentry.c  device.c  file.c  fs.c  inode.c  mount.c  open.c  path.c
fs/initfs/: CMakeLists.txt  initfs.c
include/: errno.h  kernel.h  stdlib.h  string.h  types.h
include/block/: block.h
include/boot/: bootinfo.h
include/cpu/: exception.h  interrupt.h  power.h
include/drivers/ata/ahci/: ahci.h
include/drivers/irqchip/: intel-8259.h  irqchip.h
include/drivers/pci/: pci.h  pci_list.h
include/fs/: dentry.h  device.h  file.h  fs.h  inode.h  mount.h  open.h  path.h  stat.h
include/kernel/: console.h  elf.h  init.h  stacktrace.h  symbol.h  version.h
include/kernel/lock/: spinlock.h
include/kernel/time/: time.h
include/lib/: bitset.h  buddy.h  hashmap.h  list.h  math.h  murmur.h  printf.h  stack.h
include/mm/: dma.h  heap.h  mm.h  physical.h  slab.h  valloc.h  virtual.h
include/tests/: tests.h
include/tm/: process.h  sched.h  task.h  thread.h
kernel/: CMakeLists.txt  Makefile  console.c  init.c  kmain.c  panic.c  printk.c  stacktrace.c  symbol.c
kernel/lock/: CMakeLists.txt  spinlock.c
kernel/time/: CMakeLists.txt  clocksource.c  tick.c  time.c
lib/: CMakeLists.txt  Makefile  buddy.c  hashmap.c  murmur.c  printf.c  stack.c  stdlib.c  string.c
mm/: CMakeLists.txt  dma.c  heap.c  mm.c  physical.c  slab.c  valloc.c  virtual.c
scripts/: Kbuild.include  Makefile.arch  Makefile.build  Makefile.lib  mkversion_h
scripts/basic/: .fixdep.cmd  fixdep.c
scripts/kconfig/: Makefile  confdata.c  zconf.tab.c_shipped  zconf.y
tests/: CMakeLists.txt  tests.c
tests/fs/: CMakeLists.txt  file.c
tests/lib/: CMakeLists.txt  hashmap.c
tests/mm/: CMakeLists.txt  heap.c  physical.c
tm/: CMakeLists.txt  process.c  sched.c  task.c  thread.c
tm/schedulers/: CMakeLists.txt  roundrobin.c
tools/: mkversion_h  version.sh
